REST endpoints for Fact Tables/Filters/Metrics
